--- a/III Models/3 Model C4/4 Model Selection/1.1.1 OLS_contData.ipynb
+++ b/III Models/3 Model C4/4 Model Selection/1.1.1 OLS_contData.ipynb
@@ -2,12 +2,27 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 1,
       "metadata": {
         "tags": [],
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_7540\\3619633928.py:2: DeprecationWarning: \n",
+            "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+            "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+            "but was not found to be installed on your system.\n",
+            "If this would cause problems for you,\n",
+            "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+            "        \n",
+            "  import pandas as pd\n"
+          ]
+        }
+      ],
       "source": [
         "# Import necessary libraries\n",
         "import pandas as pd\n",
@@ -18,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -31,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -45,33 +60,28 @@
             "3  2012-05-18 08:00:00    6.328690  11.39165  3.51401    2.540370     22.0604   \n",
             "4  2012-05-18 09:00:00    6.336060  11.40500  3.51910    2.514430     22.0484   \n",
             "\n",
-            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol   DI55102   DI55152  \\\n",
-            "0            0.867508    0.670721     3.354160  30.3662  0.965043  0.924515   \n",
-            "1            0.864729    0.671059     3.306475  30.3662  0.965043  0.924515   \n",
-            "2            0.856391    0.672071     3.163420  30.6785  0.965043  0.924515   \n",
-            "3            0.811652    0.674174     2.238130  32.6454  0.971625  0.933431   \n",
-            "4            0.773793    0.675408     1.391475  32.6454  0.971625  0.933431   \n",
+            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol  ...   LC55568  \\\n",
+            "0            0.867508    0.670721     3.354160  30.3662  ...  40.25250   \n",
+            "1            0.864729    0.671059     3.306475  30.3662  ...  40.25250   \n",
+            "2            0.856391    0.672071     3.163420  30.6785  ...  40.25250   \n",
+            "3            0.811652    0.674174     2.238130  32.6454  ...  39.88364   \n",
+            "4            0.773793    0.675408     1.391475  32.6454  ...  39.88364   \n",
             "\n",
-            "    DI55580   FC55003   FC55552   FC55569  FC55576  FFC55553  FFC55555  \\\n",
-            "0  1.014885  5308.885  40409.25  6924.645  322.177  1.049540  0.751183   \n",
-            "1  1.014885  5308.885  40409.25  6924.645  322.177  1.049540  0.751183   \n",
-            "2  1.014885  5308.885  40409.25  6924.645  322.177  1.049540  0.751183   \n",
-            "3  1.015146  5297.320  40866.28  6918.194  329.701  1.050092  0.764579   \n",
-            "4  1.015146  5297.320  40866.28  6918.194  329.701  1.050092  0.764579   \n",
+            "     LC90366   LC90368   PI55004   PI55020   TC55552   TC55553   TC55555  \\\n",
+            "0  15.449150  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940   \n",
+            "1  15.449150  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940   \n",
+            "2  15.449150  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940   \n",
+            "3   8.759814  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338   \n",
+            "4   8.759814  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338   \n",
             "\n",
-            "    LC52572   LC55553   LC55557   LC55568    LC90366   LC90368   PI55004  \\\n",
-            "0  66.52320  62.92105  66.31395  40.25250  15.449150  49.26750  1.236360   \n",
-            "1  66.52320  62.92105  66.31395  40.25250  15.449150  49.26750  1.236360   \n",
-            "2  66.52320  62.92105  66.31395  40.25250  15.449150  49.26750  1.236360   \n",
-            "3  66.50016  62.23534  65.92560  39.88364   8.759814  48.51306  1.190342   \n",
-            "4  66.50016  62.23534  65.92560  39.88364   8.759814  48.51306  1.190342   \n",
+            "    TI40050   TI55021  \n",
+            "0  82.96565  213.8740  \n",
+            "1  82.96565  213.8740  \n",
+            "2  82.96565  213.8740  \n",
+            "3  82.41662  214.5402  \n",
+            "4  82.41662  214.5402  \n",
             "\n",
-            "    PI55020   TC55552   TC55553   TC55555   TI40050   TI55021   TI55023  \n",
-            "0 -0.389406  179.0115  213.9375  179.9940  82.96565  213.8740  212.3085  \n",
-            "1 -0.389406  179.0115  213.9375  179.9940  82.96565  213.8740  212.3085  \n",
-            "2 -0.389406  179.0115  213.9375  179.9940  82.96565  213.8740  212.3085  \n",
-            "3 -0.318266  180.7166  201.0680  179.9338  82.41662  214.5402  212.9866  \n",
-            "4 -0.318266  180.7166  201.0680  179.9338  82.41662  214.5402  212.9866  \n"
+            "[5 rows x 32 columns]\n"
           ]
         }
       ],
@@ -89,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -100,11 +110,11 @@
               "       'DI55152', 'DI55580', 'FC55003', 'FC55552', 'FC55569', 'FC55576',\n",
               "       'FFC55553', 'FFC55555', 'LC52572', 'LC55553', 'LC55557', 'LC55568',\n",
               "       'LC90366', 'LC90368', 'PI55004', 'PI55020', 'TC55552', 'TC55553',\n",
-              "       'TC55555', 'TI40050', 'TI55021', 'TI55023'],\n",
+              "       'TC55555', 'TI40050', 'TI55021'],\n",
               "      dtype='object')"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -115,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 5,
       "metadata": {
         "trusted": true
       },
@@ -127,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -144,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -160,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -185,28 +195,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
         "# # List of columns to exclude from the XGboost feature selection results\n",
         "exclude_columns = [\n",
-        "                     'LC55553',\n",
-        "                     'TC55555',\n",
-        "                     'PI55020',\n",
-        "                     'TC55553',\n",
-        "                     'TI55021',\n",
-        "                     'LC55553',\n",
-        "                     'LC55568',\n",
-        "                     'TI40050',\n",
-        "                     'TI55023',\n",
-        "                     'PI55004',\n",
-        "                     'M_Value',\n",
-        "                     'FFC55553',\n",
-        "                     'DI55580',\n",
-        "                     'Al2O3',\n",
-        "                     'C4_pct_Hex',\n",
-        "                     'LC52572'\n",
+        "                     # First Pass\n",
+        "                    'Al2O3',\n",
+        "                    'M_Value',\n",
+        "                    'LC52572',\n",
+        "                    'TC55553',\n",
+        "                    'DI55580',\n",
+        "                    'PI55004',\n",
+        "                    'TI55021',\n",
+        "                    'LC55568',\n",
+        "                    'TI40050',\n",
+        "                    'PI55020',\n",
+        "                    \n",
+        "                    # Second Pass\n",
+        "                    'TC55555',\n",
+        "                    'LC55553',\n",
+        "\n",
+        "                    # Third Pass\n",
+        "                    'FC55003'\n",
         "\n",
         "#                  'Date',\n",
         "#                  'C4_pct_Hex', 'HydWtr_Na2O',\n",
@@ -219,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -232,20 +244,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
               "Index(['Date', '425_pct_Al', 'C4_pct_Eth', 'C4_pct_H2O', 'HydWtr_pct_Ammonia',\n",
-              "       'HydWtr_Na2O', 'Butanol', 'DI55102', 'DI55152', 'FC55003', 'FC55552',\n",
-              "       'FC55569', 'FC55576', 'FFC55555', 'LC55557', 'LC90366', 'LC90368',\n",
-              "       'TC55552'],\n",
+              "       'C4_pct_Hex', 'HydWtr_Na2O', 'Butanol', 'DI55102', 'DI55152', 'FC55552',\n",
+              "       'FC55569', 'FC55576', 'FFC55553', 'FFC55555', 'LC55557', 'LC90366',\n",
+              "       'LC90368', 'TC55552'],\n",
               "      dtype='object')"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -256,7 +268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -268,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -277,45 +289,46 @@
           "text": [
             "                                 OLS Regression Results                                \n",
             "=======================================================================================\n",
-            "Dep. Variable:                Butanol   R-squared (uncentered):                   0.607\n",
-            "Model:                            OLS   Adj. R-squared (uncentered):              0.607\n",
-            "Method:                 Least Squares   F-statistic:                              3877.\n",
-            "Date:                Thu, 21 Mar 2024   Prob (F-statistic):                        0.00\n",
-            "Time:                        00:51:38   Log-Likelihood:                     -1.4037e+05\n",
-            "No. Observations:               40127   AIC:                                  2.808e+05\n",
-            "Df Residuals:                   40111   BIC:                                  2.809e+05\n",
-            "Df Model:                          16                                                  \n",
+            "Dep. Variable:                Butanol   R-squared (uncentered):                   0.612\n",
+            "Model:                            OLS   Adj. R-squared (uncentered):              0.612\n",
+            "Method:                 Least Squares   F-statistic:                              3725.\n",
+            "Date:                Mon, 06 May 2024   Prob (F-statistic):                        0.00\n",
+            "Time:                        21:54:51   Log-Likelihood:                     -1.4012e+05\n",
+            "No. Observations:               40127   AIC:                                  2.803e+05\n",
+            "Df Residuals:                   40110   BIC:                                  2.804e+05\n",
+            "Df Model:                          17                                                  \n",
             "Covariance Type:            nonrobust                                                  \n",
             "======================================================================================\n",
             "                         coef    std err          t      P>|t|      [0.025      0.975]\n",
             "--------------------------------------------------------------------------------------\n",
-            "425_pct_Al             2.4903      0.168     14.805      0.000       2.161       2.820\n",
-            "C4_pct_Eth            -1.1522      0.078    -14.758      0.000      -1.305      -0.999\n",
-            "C4_pct_H2O             0.2651      0.018     15.142      0.000       0.231       0.299\n",
-            "HydWtr_pct_Ammonia     2.1511      0.283      7.603      0.000       1.597       2.706\n",
-            "HydWtr_Na2O           -1.0365      0.059    -17.503      0.000      -1.153      -0.920\n",
-            "DI55102               23.4893      0.996     23.578      0.000      21.537      25.442\n",
-            "DI55152               -3.9393      1.735     -2.270      0.023      -7.340      -0.539\n",
-            "FC55003               -0.0008   6.19e-05    -12.477      0.000      -0.001      -0.001\n",
-            "FC55552                0.0004   1.06e-05     37.057      0.000       0.000       0.000\n",
-            "FC55569               -0.0024      0.000    -17.252      0.000      -0.003      -0.002\n",
-            "FC55576                0.0060      0.000     33.036      0.000       0.006       0.006\n",
-            "FFC55555             -29.0346      1.720    -16.882      0.000     -32.406     -25.664\n",
-            "LC55557               -0.2380      0.018    -13.285      0.000      -0.273      -0.203\n",
-            "LC90366               -0.0275      0.001    -18.437      0.000      -0.030      -0.025\n",
-            "LC90368                0.0240      0.002     10.750      0.000       0.020       0.028\n",
-            "TC55552                0.0794      0.003     29.673      0.000       0.074       0.085\n",
+            "425_pct_Al             1.5505      0.174      8.919      0.000       1.210       1.891\n",
+            "C4_pct_Eth            -0.6222      0.074     -8.428      0.000      -0.767      -0.478\n",
+            "C4_pct_H2O             0.2785      0.017     16.570      0.000       0.246       0.311\n",
+            "HydWtr_pct_Ammonia     2.2558      0.281      8.022      0.000       1.705       2.807\n",
+            "C4_pct_Hex            -2.5136      0.181    -13.917      0.000      -2.868      -2.160\n",
+            "HydWtr_Na2O           -0.9749      0.059    -16.556      0.000      -1.090      -0.859\n",
+            "DI55102               19.0801      1.010     18.895      0.000      17.101      21.059\n",
+            "DI55152               -6.6566      1.739     -3.828      0.000     -10.065      -3.248\n",
+            "FC55552                0.0005   1.12e-05     44.192      0.000       0.000       0.001\n",
+            "FC55569               -0.0029      0.000    -21.537      0.000      -0.003      -0.003\n",
+            "FC55576                0.0059      0.000     32.200      0.000       0.005       0.006\n",
+            "FFC55553              25.2085      1.145     22.011      0.000      22.964      27.453\n",
+            "FFC55555             -44.6705      1.786    -25.017      0.000     -48.170     -41.171\n",
+            "LC55557               -0.2675      0.018    -15.016      0.000      -0.302      -0.233\n",
+            "LC90366               -0.0290      0.001    -19.539      0.000      -0.032      -0.026\n",
+            "LC90368                0.0262      0.002     11.775      0.000       0.022       0.031\n",
+            "TC55552                0.0575      0.003     20.767      0.000       0.052       0.063\n",
             "==============================================================================\n",
-            "Omnibus:                    18444.065   Durbin-Watson:                   0.048\n",
-            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            93275.351\n",
-            "Skew:                           2.241   Prob(JB):                         0.00\n",
-            "Kurtosis:                       8.974   Cond. No.                     1.85e+06\n",
+            "Omnibus:                    18240.699   Durbin-Watson:                   0.049\n",
+            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            92026.428\n",
+            "Skew:                           2.212   Prob(JB):                         0.00\n",
+            "Kurtosis:                       8.956   Cond. No.                     1.86e+06\n",
             "==============================================================================\n",
             "\n",
             "Notes:\n",
             "[1] R² is computed without centering (uncentered) since the model does not contain a constant.\n",
             "[2] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-            "[3] The condition number is large, 1.85e+06. This might indicate that there are\n",
+            "[3] The condition number is large, 1.86e+06. This might indicate that there are\n",
             "strong multicollinearity or other numerical problems.\n"
           ]
         }
@@ -332,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -363,7 +376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -382,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -391,7 +404,7 @@
           "text": [
             "\n",
             "Significant Features:\n",
-            "['425_pct_Al', 'C4_pct_Eth', 'C4_pct_H2O', 'HydWtr_pct_Ammonia', 'HydWtr_Na2O', 'DI55102', 'DI55152', 'FC55003', 'FC55569', 'FC55576', 'FFC55555', 'LC55557', 'LC90366', 'LC90368', 'TC55552']\n"
+            "['425_pct_Al', 'C4_pct_Eth', 'C4_pct_H2O', 'HydWtr_pct_Ammonia', 'C4_pct_Hex', 'HydWtr_Na2O', 'DI55102', 'DI55152', 'FC55569', 'FC55576', 'FFC55553', 'FFC55555', 'LC55557', 'LC90366', 'LC90368', 'TC55552']\n"
           ]
         }
       ],
