--- a/III Models/3 Model C4/3 Feature Selection/1.0.1 OLS_contData.ipynb
+++ b/III Models/3 Model C4/3 Feature Selection/1.0.1 OLS_contData.ipynb
@@ -12,7 +12,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_28044\\3619633928.py:2: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_12684\\3619633928.py:2: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -74,28 +74,28 @@
             "3  2012-05-18 08:00:00    6.328690  11.39165  3.51401    2.540370     22.0604   \n",
             "4  2012-05-18 09:00:00    6.336060  11.40500  3.51910    2.514430     22.0484   \n",
             "\n",
-            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol  ...    LC90366  \\\n",
-            "0            0.867508    0.670721     3.354160  30.3662  ...  15.449150   \n",
-            "1            0.864729    0.671059     3.306475  30.3662  ...  15.449150   \n",
-            "2            0.856391    0.672071     3.163420  30.6785  ...  15.449150   \n",
-            "3            0.811652    0.674174     2.238130  32.6454  ...   8.759814   \n",
-            "4            0.773793    0.675408     1.391475  32.6454  ...   8.759814   \n",
+            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol  ...   LC55568  \\\n",
+            "0            0.867508    0.670721     3.354160  30.3662  ...  40.25250   \n",
+            "1            0.864729    0.671059     3.306475  30.3662  ...  40.25250   \n",
+            "2            0.856391    0.672071     3.163420  30.6785  ...  40.25250   \n",
+            "3            0.811652    0.674174     2.238130  32.6454  ...  39.88364   \n",
+            "4            0.773793    0.675408     1.391475  32.6454  ...  39.88364   \n",
             "\n",
-            "    LC90368   PI55004   PI55020   TC55552   TC55553   TC55555   TI40050  \\\n",
-            "0  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "1  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "2  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "3  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
-            "4  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
+            "     LC90366   LC90368   PI55004   PI55020   TC55552   TC55553   TC55555  \\\n",
+            "0  15.449150  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940   \n",
+            "1  15.449150  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940   \n",
+            "2  15.449150  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940   \n",
+            "3   8.759814  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338   \n",
+            "4   8.759814  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338   \n",
             "\n",
-            "    TI55021   TI55023  \n",
-            "0  213.8740  212.3085  \n",
-            "1  213.8740  212.3085  \n",
-            "2  213.8740  212.3085  \n",
-            "3  214.5402  212.9866  \n",
-            "4  214.5402  212.9866  \n",
+            "    TI40050   TI55021  \n",
+            "0  82.96565  213.8740  \n",
+            "1  82.96565  213.8740  \n",
+            "2  82.96565  213.8740  \n",
+            "3  82.41662  214.5402  \n",
+            "4  82.41662  214.5402  \n",
             "\n",
-            "[5 rows x 33 columns]\n"
+            "[5 rows x 32 columns]\n"
           ]
         }
       ],
@@ -118,7 +118,7 @@
               "       'DI55152', 'DI55580', 'FC55003', 'FC55552', 'FC55569', 'FC55576',\n",
               "       'FFC55553', 'FFC55555', 'LC52572', 'LC55553', 'LC55557', 'LC55568',\n",
               "       'LC90366', 'LC90368', 'PI55004', 'PI55020', 'TC55552', 'TC55553',\n",
-              "       'TC55555', 'TI40050', 'TI55021', 'TI55023'],\n",
+              "       'TC55555', 'TI40050', 'TI55021'],\n",
               "      dtype='object')"
             ]
           },
@@ -219,7 +219,7 @@
               "       'DI55152', 'DI55580', 'FC55003', 'FC55552', 'FC55569', 'FC55576',\n",
               "       'FFC55553', 'FFC55555', 'LC52572', 'LC55553', 'LC55557', 'LC55568',\n",
               "       'LC90366', 'LC90368', 'PI55004', 'PI55020', 'TC55552', 'TC55553',\n",
-              "       'TC55555', 'TI40050', 'TI55021', 'TI55023'],\n",
+              "       'TC55555', 'TI40050', 'TI55021'],\n",
               "      dtype='object')"
             ]
           },
@@ -275,58 +275,57 @@
             "==============================================================================\n",
             "Dep. Variable:                Butanol   R-squared:                       0.242\n",
             "Model:                            OLS   Adj. R-squared:                  0.241\n",
-            "Method:                 Least Squares   F-statistic:                     413.0\n",
-            "Date:                Tue, 19 Mar 2024   Prob (F-statistic):               0.00\n",
-            "Time:                        17:56:01   Log-Likelihood:            -1.3877e+05\n",
+            "Method:                 Least Squares   F-statistic:                     426.7\n",
+            "Date:                Mon, 06 May 2024   Prob (F-statistic):               0.00\n",
+            "Time:                        21:04:07   Log-Likelihood:            -1.3877e+05\n",
             "No. Observations:               40127   AIC:                         2.776e+05\n",
-            "Df Residuals:                   40095   BIC:                         2.779e+05\n",
-            "Df Model:                          31                                         \n",
+            "Df Residuals:                   40096   BIC:                         2.779e+05\n",
+            "Df Model:                          30                                         \n",
             "Covariance Type:            nonrobust                                         \n",
             "======================================================================================\n",
             "                         coef    std err          t      P>|t|      [0.025      0.975]\n",
             "--------------------------------------------------------------------------------------\n",
-            "const                -63.2112     14.222     -4.445      0.000     -91.086     -35.336\n",
-            "425_pct_Al             1.2698      0.203      6.255      0.000       0.872       1.668\n",
-            "Al2O3                 -1.0809      0.109     -9.927      0.000      -1.294      -0.868\n",
-            "M_Value               -0.4727      0.249     -1.899      0.058      -0.961       0.015\n",
-            "C4_pct_Eth            -1.7417      0.089    -19.601      0.000      -1.916      -1.568\n",
-            "C4_pct_H2O             0.2836      0.023     12.508      0.000       0.239       0.328\n",
-            "HydWtr_pct_Ammonia     2.9993      0.278     10.782      0.000       2.454       3.544\n",
-            "C4_pct_Hex            -2.4595      0.184    -13.373      0.000      -2.820      -2.099\n",
-            "HydWtr_Na2O           -1.0022      0.058    -17.229      0.000      -1.116      -0.888\n",
-            "DI55102               25.3149      1.120     22.597      0.000      23.119      27.511\n",
-            "DI55152                6.5115      2.426      2.684      0.007       1.756      11.267\n",
-            "DI55580                5.4343      1.124      4.837      0.000       3.232       7.636\n",
-            "FC55003               -0.0017   7.13e-05    -23.559      0.000      -0.002      -0.002\n",
-            "FC55552                0.0004   1.13e-05     37.532      0.000       0.000       0.000\n",
-            "FC55569               -0.0020      0.000    -12.022      0.000      -0.002      -0.002\n",
-            "FC55576                0.0040      0.000     18.251      0.000       0.004       0.004\n",
-            "FFC55553              14.6438      1.314     11.144      0.000      12.068      17.219\n",
-            "FFC55555             -28.5335      2.070    -13.784      0.000     -32.591     -24.476\n",
-            "LC52572                0.1472      0.019      7.903      0.000       0.111       0.184\n",
-            "LC55553               -0.1844      0.008    -24.219      0.000      -0.199      -0.169\n",
-            "LC55557               -0.2639      0.021    -12.781      0.000      -0.304      -0.223\n",
-            "LC55568                0.3654      0.036     10.141      0.000       0.295       0.436\n",
-            "LC90366               -0.0256      0.002    -16.428      0.000      -0.029      -0.023\n",
-            "LC90368                0.0165      0.002      6.805      0.000       0.012       0.021\n",
-            "PI55004                0.0438      0.186      0.235      0.814      -0.321       0.409\n",
-            "PI55020                1.5098      0.053     28.615      0.000       1.406       1.613\n",
-            "TC55552                0.0448      0.003     15.343      0.000       0.039       0.051\n",
-            "TC55553                0.0321      0.002     15.450      0.000       0.028       0.036\n",
-            "TC55555                0.4280      0.030     14.161      0.000       0.369       0.487\n",
-            "TI40050               -0.0575      0.003    -16.514      0.000      -0.064      -0.051\n",
-            "TI55021               -0.0784      0.006    -13.160      0.000      -0.090      -0.067\n",
-            "TI55023               -0.0408      0.060     -0.679      0.497      -0.159       0.077\n",
+            "const                -71.8092      6.477    -11.087      0.000     -84.504     -59.115\n",
+            "425_pct_Al             1.2881      0.201      6.401      0.000       0.894       1.682\n",
+            "Al2O3                 -1.0714      0.108     -9.923      0.000      -1.283      -0.860\n",
+            "M_Value               -0.4629      0.249     -1.862      0.063      -0.950       0.024\n",
+            "C4_pct_Eth            -1.7305      0.087    -19.819      0.000      -1.902      -1.559\n",
+            "C4_pct_H2O             0.2797      0.022     12.756      0.000       0.237       0.323\n",
+            "HydWtr_pct_Ammonia     3.0035      0.278     10.801      0.000       2.458       3.549\n",
+            "C4_pct_Hex            -2.4522      0.184    -13.356      0.000      -2.812      -2.092\n",
+            "HydWtr_Na2O           -1.0049      0.058    -17.320      0.000      -1.119      -0.891\n",
+            "DI55102               25.2537      1.117     22.616      0.000      23.065      27.442\n",
+            "DI55152                6.5235      2.426      2.689      0.007       1.768      11.278\n",
+            "DI55580                5.3974      1.122      4.810      0.000       3.198       7.597\n",
+            "FC55003               -0.0017   7.13e-05    -23.549      0.000      -0.002      -0.002\n",
+            "FC55552                0.0004   1.13e-05     37.529      0.000       0.000       0.000\n",
+            "FC55569               -0.0020      0.000    -12.046      0.000      -0.002      -0.002\n",
+            "FC55576                0.0040      0.000     18.344      0.000       0.004       0.004\n",
+            "FFC55553              14.5797      1.311     11.124      0.000      12.011      17.148\n",
+            "FFC55555             -28.6680      2.061    -13.913      0.000     -32.707     -24.629\n",
+            "LC52572                0.1473      0.019      7.904      0.000       0.111       0.184\n",
+            "LC55553               -0.1845      0.008    -24.243      0.000      -0.199      -0.170\n",
+            "LC55557               -0.2629      0.021    -12.765      0.000      -0.303      -0.223\n",
+            "LC55568                0.3641      0.036     10.119      0.000       0.294       0.435\n",
+            "LC90366               -0.0256      0.002    -16.419      0.000      -0.029      -0.023\n",
+            "LC90368                0.0165      0.002      6.816      0.000       0.012       0.021\n",
+            "PI55004               -0.0776      0.052     -1.478      0.139      -0.180       0.025\n",
+            "PI55020                1.5062      0.053     28.689      0.000       1.403       1.609\n",
+            "TC55552                0.0449      0.003     15.401      0.000       0.039       0.051\n",
+            "TC55553                0.0322      0.002     15.543      0.000       0.028       0.036\n",
+            "TC55555                0.4280      0.030     14.162      0.000       0.369       0.487\n",
+            "TI40050               -0.0572      0.003    -16.560      0.000      -0.064      -0.050\n",
+            "TI55021               -0.0786      0.006    -13.213      0.000      -0.090      -0.067\n",
             "==============================================================================\n",
-            "Omnibus:                    18053.831   Durbin-Watson:                   0.053\n",
-            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            93433.896\n",
+            "Omnibus:                    18051.837   Durbin-Watson:                   0.053\n",
+            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            93420.634\n",
             "Skew:                           2.171   Prob(JB):                         0.00\n",
-            "Kurtosis:                       9.085   Cond. No.                     1.40e+07\n",
+            "Kurtosis:                       9.084   Cond. No.                     6.40e+06\n",
             "==============================================================================\n",
             "\n",
             "Notes:\n",
             "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-            "[2] The condition number is large, 1.4e+07. This might indicate that there are\n",
+            "[2] The condition number is large, 6.4e+06. This might indicate that there are\n",
             "strong multicollinearity or other numerical problems.\n"
           ]
         }
@@ -350,7 +349,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['M_Value', 'PI55004', 'TI55023']\n"
+            "['M_Value', 'PI55004']\n"
           ]
         }
       ],
@@ -382,9 +381,8 @@
           "output_type": "stream",
           "text": [
             "               coef  std err      t  P>|t|  [0.025  0.975]\n",
-            "3   M_Value -0.4727    0.249 -1.899  0.058  -0.961   0.015\n",
-            "24  PI55004  0.0438    0.186  0.235  0.814  -0.321   0.409\n",
-            "31  TI55023 -0.0408    0.060 -0.679  0.497  -0.159   0.077\n"
+            "3   M_Value -0.4629    0.249 -1.862  0.063   -0.95   0.024\n",
+            "24  PI55004 -0.0776    0.052 -1.478  0.139   -0.18   0.025\n"
           ]
         }
       ],
@@ -417,14 +415,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-19 19:59:18.517148\n"
+            "2024-05-06 21:04:07.231077\n"
           ]
         }
       ],
