--- a/III Models/3 Model C4/3 Feature Selection/1.0.4 XGB_contData_iter.ipynb
+++ b/III Models/3 Model C4/3 Feature Selection/1.0.4 XGB_contData_iter.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -13,12 +13,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "tags": [],
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_18976\\526159370.py:2: DeprecationWarning: \n",
+            "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+            "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+            "but was not found to be installed on your system.\n",
+            "If this would cause problems for you,\n",
+            "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+            "        \n",
+            "  import pandas as pd\n"
+          ]
+        }
+      ],
       "source": [
         "# Import necessary libraries\n",
         "import pandas as pd\n",
@@ -40,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -54,28 +69,28 @@
             "3  2012-05-18 08:00:00    6.328690  11.39165  3.51401    2.540370     22.0604   \n",
             "4  2012-05-18 09:00:00    6.336060  11.40500  3.51910    2.514430     22.0484   \n",
             "\n",
-            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol  ...    LC90366  \\\n",
-            "0            0.867508    0.670721     3.354160  30.3662  ...  15.449150   \n",
-            "1            0.864729    0.671059     3.306475  30.3662  ...  15.449150   \n",
-            "2            0.856391    0.672071     3.163420  30.6785  ...  15.449150   \n",
-            "3            0.811652    0.674174     2.238130  32.6454  ...   8.759814   \n",
-            "4            0.773793    0.675408     1.391475  32.6454  ...   8.759814   \n",
+            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol  ...   LC55568  \\\n",
+            "0            0.867508    0.670721     3.354160  30.3662  ...  40.25250   \n",
+            "1            0.864729    0.671059     3.306475  30.3662  ...  40.25250   \n",
+            "2            0.856391    0.672071     3.163420  30.6785  ...  40.25250   \n",
+            "3            0.811652    0.674174     2.238130  32.6454  ...  39.88364   \n",
+            "4            0.773793    0.675408     1.391475  32.6454  ...  39.88364   \n",
             "\n",
-            "    LC90368   PI55004   PI55020   TC55552   TC55553   TC55555   TI40050  \\\n",
-            "0  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "1  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "2  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "3  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
-            "4  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
+            "     LC90366   LC90368   PI55004   PI55020   TC55552   TC55553   TC55555  \\\n",
+            "0  15.449150  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940   \n",
+            "1  15.449150  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940   \n",
+            "2  15.449150  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940   \n",
+            "3   8.759814  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338   \n",
+            "4   8.759814  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338   \n",
             "\n",
-            "    TI55021   TI55023  \n",
-            "0  213.8740  212.3085  \n",
-            "1  213.8740  212.3085  \n",
-            "2  213.8740  212.3085  \n",
-            "3  214.5402  212.9866  \n",
-            "4  214.5402  212.9866  \n",
+            "    TI40050   TI55021  \n",
+            "0  82.96565  213.8740  \n",
+            "1  82.96565  213.8740  \n",
+            "2  82.96565  213.8740  \n",
+            "3  82.41662  214.5402  \n",
+            "4  82.41662  214.5402  \n",
             "\n",
-            "[5 rows x 33 columns]\n"
+            "[5 rows x 32 columns]\n"
           ]
         }
       ],
@@ -95,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {
         "trusted": true
       },
@@ -107,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -116,7 +131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -147,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -158,11 +173,11 @@
               "       'DI55152', 'DI55580', 'FC55003', 'FC55552', 'FC55569', 'FC55576',\n",
               "       'FFC55553', 'FFC55555', 'LC52572', 'LC55553', 'LC55557', 'LC55568',\n",
               "       'LC90366', 'LC90368', 'PI55004', 'PI55020', 'TC55552', 'TC55553',\n",
-              "       'TC55555', 'TI40050', 'TI55021', 'TI55023'],\n",
+              "       'TC55555', 'TI40050', 'TI55021'],\n",
               "      dtype='object')"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -173,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -185,7 +200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -240,7 +255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -248,32 +263,32 @@
           "output_type": "stream",
           "text": [
             "                                        Feature Rotation     Feature  \\\n",
-            "0      [425_pct_Al, LC55568, FFC55553, FC55003, TC555...  425_pct_Al   \n",
-            "1      [425_pct_Al, LC55568, FFC55553, FC55003, TC555...     LC55568   \n",
-            "2      [425_pct_Al, LC55568, FFC55553, FC55003, TC555...    FFC55553   \n",
-            "3      [425_pct_Al, LC55568, FFC55553, FC55003, TC555...     FC55003   \n",
-            "4      [425_pct_Al, LC55568, FFC55553, FC55003, TC555...     TC55555   \n",
+            "0      [425_pct_Al, LC55557, FFC55553, FC55003, PI550...  425_pct_Al   \n",
+            "1      [425_pct_Al, LC55557, FFC55553, FC55003, PI550...     LC55557   \n",
+            "2      [425_pct_Al, LC55557, FFC55553, FC55003, PI550...    FFC55553   \n",
+            "3      [425_pct_Al, LC55557, FFC55553, FC55003, PI550...     FC55003   \n",
+            "4      [425_pct_Al, LC55557, FFC55553, FC55003, PI550...     PI55004   \n",
             "...                                                  ...         ...   \n",
-            "28825  [TI55023, TI40050, DI55102, DI55152, TC55553, ...     LC90366   \n",
-            "28826  [TI55023, TI40050, DI55102, DI55152, TC55553, ...     FC55576   \n",
-            "28827  [TI55023, TI40050, DI55102, DI55152, TC55553, ...     TC55552   \n",
-            "28828  [TI55023, TI40050, DI55102, DI55152, TC55553, ...     FC55552   \n",
-            "28829  [TI55023, TI40050, DI55102, DI55152, TC55553, ...  425_pct_Al   \n",
+            "26995  [TI55021, M_Value, DI55102, 425_pct_Al, FC5557...     PI55004   \n",
+            "26996  [TI55021, M_Value, DI55102, 425_pct_Al, FC5557...     DI55580   \n",
+            "26997  [TI55021, M_Value, DI55102, 425_pct_Al, FC5557...  C4_pct_Hex   \n",
+            "26998  [TI55021, M_Value, DI55102, 425_pct_Al, FC5557...     LC90366   \n",
+            "26999  [TI55021, M_Value, DI55102, 425_pct_Al, FC5557...     TC55553   \n",
             "\n",
             "       Importance  \n",
-            "0           493.0  \n",
-            "1           222.0  \n",
-            "2           237.0  \n",
-            "3           218.0  \n",
-            "4           170.0  \n",
+            "0           497.0  \n",
+            "1           284.0  \n",
+            "2           217.0  \n",
+            "3           226.0  \n",
+            "4           174.0  \n",
             "...           ...  \n",
-            "28825       153.0  \n",
-            "28826       155.0  \n",
-            "28827       172.0  \n",
-            "28828       158.0  \n",
-            "28829       154.0  \n",
+            "26995       117.0  \n",
+            "26996       129.0  \n",
+            "26997       157.0  \n",
+            "26998       150.0  \n",
+            "26999       119.0  \n",
             "\n",
-            "[28830 rows x 3 columns]\n"
+            "[27000 rows x 3 columns]\n"
           ]
         }
       ],
@@ -283,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -307,7 +322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -315,44 +330,43 @@
           "output_type": "stream",
           "text": [
             "               Feature  Average Importance                Description\n",
-            "0   HydWtr_pct_Ammonia          227.722581                        NaN\n",
-            "1          HydWtr_Na2O          212.411828                        NaN\n",
-            "2              TC55552          207.874194   DC-551 ALKOX  FD PREHEAT\n",
-            "3              FC55569          197.351613     30# STM TO C4 STRIPPER\n",
-            "4           C4_pct_H2O          196.354839                        NaN\n",
-            "5           425_pct_Al          192.492473                        NaN\n",
-            "6              FC55003          191.511828   DA-551 O/H H2O TO DC-551\n",
-            "7              LC90368          187.060215       FB-658 ALKOXIDE TANK\n",
-            "8           C4_pct_Hex          186.644086                        NaN\n",
-            "9              FC55552          185.907527   ALK FD TO HYDR RX DC-551\n",
-            "10          C4_pct_Eth          185.891398                        NaN\n",
-            "11            FFC55553          182.823656   DC551 H2O/ALKOXIDE RATIO\n",
-            "12             LC55557          182.505376        FA-554 SLURRY LEVEL\n",
-            "13             FC55576          181.621505   CONDENSATE TO DESUPERHTR\n",
-            "14             DI55102          181.230108           HYDROL RX OUTLET\n",
-            "15             M_Value          180.132258                        NaN\n",
-            "16             LC90366          172.938710         FB-657 SAO STORAGE\n",
-            "17             LC52572          171.348387   FB-554 SLURRY SURGE TANK\n",
-            "18             DI55152          170.191398     2ND STG SEPR TO FA-560\n",
-            "19             DI55580          160.326882   DA-554 BTMS SLURRY TO EX\n",
-            "20               Al2O3          157.970968                        NaN\n",
-            "21            FFC55555          154.272043   RECYC BUT/ALKOX FD RATIO\n",
-            "22             TC55555          152.260215        EA-552 OUT  RECY C4\n",
-            "23             PI55020          151.460215        DA-554 TOP PRESSURE\n",
-            "24             TC55553          148.665591    DC-551 HYDR H2O PREHEAT\n",
-            "25             TI55021          147.448387             STEAM TO DA554\n",
-            "26             LC55553          147.170968   DC551 HYDR RX SLURRY LEV\n",
-            "27             LC55568          146.126882    DA-554 C4 STRPR BOTTOMS\n",
-            "28             TI40050          141.439785  CLARK AIR COMP INLET TEMP\n",
-            "29             TI55023          108.291398                        NaN\n",
-            "30             PI55004          100.552688     DA-554 BOTTOM PRESSURE\n"
+            "0          HydWtr_Na2O          223.136667                        NaN\n",
+            "1   HydWtr_pct_Ammonia          215.513333                        NaN\n",
+            "2           425_pct_Al          208.247778                        NaN\n",
+            "3              FC55569          199.868889     30# STM TO C4 STRIPPER\n",
+            "4           C4_pct_H2O          193.913333                        NaN\n",
+            "5              LC55557          193.154444        FA-554 SLURRY LEVEL\n",
+            "6              TC55552          192.710000   DC-551 ALKOX  FD PREHEAT\n",
+            "7           C4_pct_Hex          189.655556                        NaN\n",
+            "8              DI55102          186.996667           HYDROL RX OUTLET\n",
+            "9              FC55552          184.591111   ALK FD TO HYDR RX DC-551\n",
+            "10          C4_pct_Eth          184.134444                        NaN\n",
+            "11             FC55003          182.184444   DA-551 O/H H2O TO DC-551\n",
+            "12             FC55576          180.901111   CONDENSATE TO DESUPERHTR\n",
+            "13             LC90368          178.823333       FB-658 ALKOXIDE TANK\n",
+            "14             TC55555          175.145556        EA-552 OUT  RECY C4\n",
+            "15             LC90366          174.923333         FB-657 SAO STORAGE\n",
+            "16             DI55152          173.316667     2ND STG SEPR TO FA-560\n",
+            "17             LC55553          171.636667   DC551 HYDR RX SLURRY LEV\n",
+            "18            FFC55555          170.332222   RECYC BUT/ALKOX FD RATIO\n",
+            "19            FFC55553          163.464444   DC551 H2O/ALKOXIDE RATIO\n",
+            "20               Al2O3          162.303333                        NaN\n",
+            "21             M_Value          161.100000                        NaN\n",
+            "22             LC52572          158.661111   FB-554 SLURRY SURGE TANK\n",
+            "23             TC55553          152.581111    DC-551 HYDR H2O PREHEAT\n",
+            "24             DI55580          152.202222   DA-554 BTMS SLURRY TO EX\n",
+            "25             PI55004          145.938889     DA-554 BOTTOM PRESSURE\n",
+            "26             TI55021          143.554444             STEAM TO DA554\n",
+            "27             LC55568          143.480000    DA-554 C4 STRPR BOTTOMS\n",
+            "28             TI40050          141.392222  CLARK AIR COMP INLET TEMP\n",
+            "29             PI55020          129.136667        DA-554 TOP PRESSURE\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_19100\\3091506829.py:9: SettingWithCopyWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_18976\\3091506829.py:9: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -379,14 +393,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-19 19:58:48.507877\n"
+            "2024-05-06 21:14:57.027830\n"
           ]
         }
       ],
