--- a/III Models/3 Model C4/3 Feature Selection/1.0.5 XGB_contData_iter_reducedlist.ipynb
+++ b/III Models/3 Model C4/3 Feature Selection/1.0.5 XGB_contData_iter_reducedlist.ipynb
@@ -23,7 +23,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_46440\\526159370.py:2: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_16468\\526159370.py:2: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -69,28 +69,28 @@
             "3  2012-05-18 08:00:00    6.328690  11.39165  3.51401    2.540370     22.0604   \n",
             "4  2012-05-18 09:00:00    6.336060  11.40500  3.51910    2.514430     22.0484   \n",
             "\n",
-            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol  ...    LC90366  \\\n",
-            "0            0.867508    0.670721     3.354160  30.3662  ...  15.449150   \n",
-            "1            0.864729    0.671059     3.306475  30.3662  ...  15.449150   \n",
-            "2            0.856391    0.672071     3.163420  30.6785  ...  15.449150   \n",
-            "3            0.811652    0.674174     2.238130  32.6454  ...   8.759814   \n",
-            "4            0.773793    0.675408     1.391475  32.6454  ...   8.759814   \n",
+            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol  ...   LC55568  \\\n",
+            "0            0.867508    0.670721     3.354160  30.3662  ...  40.25250   \n",
+            "1            0.864729    0.671059     3.306475  30.3662  ...  40.25250   \n",
+            "2            0.856391    0.672071     3.163420  30.6785  ...  40.25250   \n",
+            "3            0.811652    0.674174     2.238130  32.6454  ...  39.88364   \n",
+            "4            0.773793    0.675408     1.391475  32.6454  ...  39.88364   \n",
             "\n",
-            "    LC90368   PI55004   PI55020   TC55552   TC55553   TC55555   TI40050  \\\n",
-            "0  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "1  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "2  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "3  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
-            "4  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
+            "     LC90366   LC90368   PI55004   PI55020   TC55552   TC55553   TC55555  \\\n",
+            "0  15.449150  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940   \n",
+            "1  15.449150  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940   \n",
+            "2  15.449150  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940   \n",
+            "3   8.759814  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338   \n",
+            "4   8.759814  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338   \n",
             "\n",
-            "    TI55021   TI55023  \n",
-            "0  213.8740  212.3085  \n",
-            "1  213.8740  212.3085  \n",
-            "2  213.8740  212.3085  \n",
-            "3  214.5402  212.9866  \n",
-            "4  214.5402  212.9866  \n",
+            "    TI40050   TI55021  \n",
+            "0  82.96565  213.8740  \n",
+            "1  82.96565  213.8740  \n",
+            "2  82.96565  213.8740  \n",
+            "3  82.41662  214.5402  \n",
+            "4  82.41662  214.5402  \n",
             "\n",
-            "[5 rows x 33 columns]\n"
+            "[5 rows x 32 columns]\n"
           ]
         }
       ],
@@ -158,16 +158,22 @@
       "outputs": [],
       "source": [
         "# # List of columns to exclude to run XGboost feature selection\n",
-        "exclude_columns = [\n",
-        "                    'TC55555',\n",
-        "                    'PI55020',\n",
+        "exclude_columns = [ # First Pass\n",
+        "                    'Al2O3',\n",
+        "                    'M_Value',\n",
+        "                    'LC52572',\n",
         "                    'TC55553',\n",
+        "                    'DI55580',\n",
+        "                    'PI55004',\n",
         "                    'TI55021',\n",
-        "                    'LC55553',\n",
         "                    'LC55568',\n",
         "                    'TI40050',\n",
-        "                    'TI55023',\n",
-        "                    'PI55004'\n",
+        "                    'PI55020'\n",
+        "\n",
+        "                #     'TC55555'\n",
+        "                #     'LC55553'\n",
+        "                #     'LC55568'\n",
+        "                #     'TI55023'\n",
         "\n",
         "        # 'Octanol', 'Hexanol',\n",
         "#        'Ethanol', 'Decanol',\n",
@@ -196,11 +202,10 @@
         {
           "data": {
             "text/plain": [
-              "Index(['Date', '425_pct_Al', 'Al2O3', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
-              "       'HydWtr_pct_Ammonia', 'C4_pct_Hex', 'HydWtr_Na2O', 'Butanol', 'DI55102',\n",
-              "       'DI55152', 'DI55580', 'FC55003', 'FC55552', 'FC55569', 'FC55576',\n",
-              "       'FFC55553', 'FFC55555', 'LC52572', 'LC55557', 'LC90366', 'LC90368',\n",
-              "       'TC55552'],\n",
+              "Index(['Date', '425_pct_Al', 'C4_pct_Eth', 'C4_pct_H2O', 'HydWtr_pct_Ammonia',\n",
+              "       'C4_pct_Hex', 'HydWtr_Na2O', 'Butanol', 'DI55102', 'DI55152', 'FC55003',\n",
+              "       'FC55552', 'FC55569', 'FC55576', 'FFC55553', 'FFC55555', 'LC55553',\n",
+              "       'LC55557', 'LC90366', 'LC90368', 'TC55552', 'TC55555'],\n",
               "      dtype='object')"
             ]
           },
@@ -289,33 +294,33 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "                                        Feature Rotation             Feature  \\\n",
-            "0      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...          425_pct_Al   \n",
-            "1      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...             LC90368   \n",
-            "2      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...          C4_pct_Hex   \n",
-            "3      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...            FFC55553   \n",
-            "4      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...  HydWtr_pct_Ammonia   \n",
-            "...                                                  ...                 ...   \n",
-            "14515  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...             DI55102   \n",
-            "14516  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...            FFC55555   \n",
-            "14517  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...             FC55569   \n",
-            "14518  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...          C4_pct_Hex   \n",
-            "14519  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...               Al2O3   \n",
+            "                                        Feature Rotation      Feature  \\\n",
+            "0      [425_pct_Al, LC55557, LC55553, HydWtr_Na2O, FC...   425_pct_Al   \n",
+            "1      [425_pct_Al, LC55557, LC55553, HydWtr_Na2O, FC...      LC55557   \n",
+            "2      [425_pct_Al, LC55557, LC55553, HydWtr_Na2O, FC...      LC55553   \n",
+            "3      [425_pct_Al, LC55557, LC55553, HydWtr_Na2O, FC...  HydWtr_Na2O   \n",
+            "4      [425_pct_Al, LC55557, LC55553, HydWtr_Na2O, FC...      FC55569   \n",
+            "...                                                  ...          ...   \n",
+            "11995  [TC55555, 425_pct_Al, HydWtr_pct_Ammonia, FFC5...      DI55152   \n",
+            "11996  [TC55555, 425_pct_Al, HydWtr_pct_Ammonia, FFC5...      DI55102   \n",
+            "11997  [TC55555, 425_pct_Al, HydWtr_pct_Ammonia, FFC5...  HydWtr_Na2O   \n",
+            "11998  [TC55555, 425_pct_Al, HydWtr_pct_Ammonia, FFC5...   C4_pct_Eth   \n",
+            "11999  [TC55555, 425_pct_Al, HydWtr_pct_Ammonia, FFC5...      FC55569   \n",
             "\n",
             "       Importance  \n",
-            "0           507.0  \n",
-            "1           340.0  \n",
-            "2           243.0  \n",
-            "3           250.0  \n",
-            "4           312.0  \n",
+            "0           543.0  \n",
+            "1           316.0  \n",
+            "2           249.0  \n",
+            "3           338.0  \n",
+            "4           275.0  \n",
             "...           ...  \n",
-            "14515       197.0  \n",
-            "14516       187.0  \n",
-            "14517       193.0  \n",
-            "14518       166.0  \n",
-            "14519       192.0  \n",
+            "11995       214.0  \n",
+            "11996       238.0  \n",
+            "11997       249.0  \n",
+            "11998       257.0  \n",
+            "11999       201.0  \n",
             "\n",
-            "[14520 rows x 3 columns]\n"
+            "[12000 rows x 3 columns]\n"
           ]
         }
       ],
@@ -357,35 +362,33 @@
           "output_type": "stream",
           "text": [
             "               Feature  Average Importance               Description\n",
-            "0   HydWtr_pct_Ammonia          284.618182                       NaN\n",
-            "1              TC55552          276.412121  DC-551 ALKOX  FD PREHEAT\n",
-            "2          HydWtr_Na2O          266.648485                       NaN\n",
-            "3           C4_pct_H2O          256.862121                       NaN\n",
-            "4              FC55552          255.525758  ALK FD TO HYDR RX DC-551\n",
-            "5           C4_pct_Eth          253.631818                       NaN\n",
-            "6              LC90368          249.543939      FB-658 ALKOXIDE TANK\n",
-            "7              FC55003          246.583333  DA-551 O/H H2O TO DC-551\n",
-            "8              DI55152          245.648485    2ND STG SEPR TO FA-560\n",
-            "9           425_pct_Al          239.277273                       NaN\n",
-            "10             LC55557          238.777273       FA-554 SLURRY LEVEL\n",
-            "11             FC55576          236.889394  CONDENSATE TO DESUPERHTR\n",
-            "12             DI55102          235.024242          HYDROL RX OUTLET\n",
-            "13             FC55569          234.300000    30# STM TO C4 STRIPPER\n",
-            "14             LC90366          234.178788        FB-657 SAO STORAGE\n",
-            "15            FFC55555          225.686364  RECYC BUT/ALKOX FD RATIO\n",
-            "16             M_Value          223.860606                       NaN\n",
-            "17            FFC55553          214.578788  DC551 H2O/ALKOXIDE RATIO\n",
-            "18             DI55580          213.721212  DA-554 BTMS SLURRY TO EX\n",
-            "19               Al2O3          209.865152                       NaN\n",
-            "20          C4_pct_Hex          205.965152                       NaN\n",
-            "21             LC52572          203.401515  FB-554 SLURRY SURGE TANK\n"
+            "0   HydWtr_pct_Ammonia          314.066667                       NaN\n",
+            "1           C4_pct_H2O          302.000000                       NaN\n",
+            "2           C4_pct_Eth          299.916667                       NaN\n",
+            "3          HydWtr_Na2O          295.685000                       NaN\n",
+            "4              LC90368          292.263333      FB-658 ALKOXIDE TANK\n",
+            "5              FC55576          278.885000  CONDENSATE TO DESUPERHTR\n",
+            "6           C4_pct_Hex          277.353333                       NaN\n",
+            "7              TC55552          277.080000  DC-551 ALKOX  FD PREHEAT\n",
+            "8              DI55102          276.870000          HYDROL RX OUTLET\n",
+            "9              FC55552          272.410000  ALK FD TO HYDR RX DC-551\n",
+            "10          425_pct_Al          264.005000                       NaN\n",
+            "11             FC55003          260.063333  DA-551 O/H H2O TO DC-551\n",
+            "12            FFC55553          257.561667  DC551 H2O/ALKOXIDE RATIO\n",
+            "13             LC90366          257.368333        FB-657 SAO STORAGE\n",
+            "14             DI55152          254.420000    2ND STG SEPR TO FA-560\n",
+            "15             FC55569          250.010000    30# STM TO C4 STRIPPER\n",
+            "16             LC55557          241.768333       FA-554 SLURRY LEVEL\n",
+            "17            FFC55555          239.665000  RECYC BUT/ALKOX FD RATIO\n",
+            "18             TC55555          211.400000       EA-552 OUT  RECY C4\n",
+            "19             LC55553          211.208333  DC551 HYDR RX SLURRY LEV\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_46440\\3091506829.py:9: SettingWithCopyWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_16468\\3091506829.py:9: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -419,7 +422,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-20 23:50:22.650111\n"
+            "2024-05-06 21:23:10.318790\n"
           ]
         }
       ],
