--- a/III Models/3 Model C4/3 Feature Selection/1.0.6 XGB_contData_iter_reducedlist-2.ipynb
+++ b/III Models/3 Model C4/3 Feature Selection/1.0.6 XGB_contData_iter_reducedlist-2.ipynb
@@ -23,7 +23,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_54704\\526159370.py:2: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_3656\\526159370.py:2: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -69,28 +69,28 @@
             "3  2012-05-18 08:00:00    6.328690  11.39165  3.51401    2.540370     22.0604   \n",
             "4  2012-05-18 09:00:00    6.336060  11.40500  3.51910    2.514430     22.0484   \n",
             "\n",
-            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol  ...    LC90366  \\\n",
-            "0            0.867508    0.670721     3.354160  30.3662  ...  15.449150   \n",
-            "1            0.864729    0.671059     3.306475  30.3662  ...  15.449150   \n",
-            "2            0.856391    0.672071     3.163420  30.6785  ...  15.449150   \n",
-            "3            0.811652    0.674174     2.238130  32.6454  ...   8.759814   \n",
-            "4            0.773793    0.675408     1.391475  32.6454  ...   8.759814   \n",
+            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol  ...   LC55568  \\\n",
+            "0            0.867508    0.670721     3.354160  30.3662  ...  40.25250   \n",
+            "1            0.864729    0.671059     3.306475  30.3662  ...  40.25250   \n",
+            "2            0.856391    0.672071     3.163420  30.6785  ...  40.25250   \n",
+            "3            0.811652    0.674174     2.238130  32.6454  ...  39.88364   \n",
+            "4            0.773793    0.675408     1.391475  32.6454  ...  39.88364   \n",
             "\n",
-            "    LC90368   PI55004   PI55020   TC55552   TC55553   TC55555   TI40050  \\\n",
-            "0  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "1  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "2  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "3  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
-            "4  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
+            "     LC90366   LC90368   PI55004   PI55020   TC55552   TC55553   TC55555  \\\n",
+            "0  15.449150  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940   \n",
+            "1  15.449150  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940   \n",
+            "2  15.449150  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940   \n",
+            "3   8.759814  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338   \n",
+            "4   8.759814  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338   \n",
             "\n",
-            "    TI55021   TI55023  \n",
-            "0  213.8740  212.3085  \n",
-            "1  213.8740  212.3085  \n",
-            "2  213.8740  212.3085  \n",
-            "3  214.5402  212.9866  \n",
-            "4  214.5402  212.9866  \n",
+            "    TI40050   TI55021  \n",
+            "0  82.96565  213.8740  \n",
+            "1  82.96565  213.8740  \n",
+            "2  82.96565  213.8740  \n",
+            "3  82.41662  214.5402  \n",
+            "4  82.41662  214.5402  \n",
             "\n",
-            "[5 rows x 33 columns]\n"
+            "[5 rows x 32 columns]\n"
           ]
         }
       ],
@@ -158,36 +158,24 @@
       "outputs": [],
       "source": [
         "# # List of columns to exclude to run XGboost feature selection\n",
-        "exclude_columns = [\n",
-        "                    'TC55555',\n",
-        "                    'PI55020',\n",
+        "exclude_columns = [ # First Pass\n",
+        "                    'Al2O3',\n",
+        "                    'M_Value',\n",
+        "                    'LC52572',\n",
         "                    'TC55553',\n",
+        "                    'DI55580',\n",
+        "                    'PI55004',\n",
         "                    'TI55021',\n",
-        "                    'LC55553',\n",
         "                    'LC55568',\n",
         "                    'TI40050',\n",
-        "                    'TI55023',\n",
-        "                    'PI55004',\n",
-        "                    'M_Value',\n",
-        "                    'FFC55553',\n",
-        "                    'DI55580',\n",
-        "                    'Al2O3',\n",
-        "                    'C4_pct_Hex',\n",
-        "                    'LC52572'\n",
+        "                    'PI55020',\n",
+        "                    \n",
+        "                    # Second Pass\n",
+        "                    'TC55555',\n",
+        "                    'LC55553',\n",
         "\n",
-        "        # 'Octanol', 'Hexanol',\n",
-        "#        'Ethanol', 'Decanol',\n",
-        "       \n",
-        "#        'TI52014', 'TI55013', 'TI55014', 'TI55015', 'TI55016', 'TI55017', 'TI55021', 'TI55023',\n",
-        "#        'TC52015', 'FC52018', 'II52554', 'TI40050', 'VI52558B'\n",
-        "\n",
-        "#        # 'FC55102', 'FC55152', 'LC55557', 'LC55568', 'TC55555',\n",
-        "\n",
-        "#        # '425 SAO Al', 'FFC55553', 'LC52572', 'LC90366',\n",
-        "\n",
-        "#        # 'FC42428', 'LC55553',\n",
-        "\n",
-        "#        # 'FC55009'\n",
+        "                    # Third Pass\n",
+        "                    'FC55003'\n",
         "                   ]\n",
         "\n",
         "# # Create a new DataFrame without the excluded columnsd\n",
@@ -203,9 +191,9 @@
           "data": {
             "text/plain": [
               "Index(['Date', '425_pct_Al', 'C4_pct_Eth', 'C4_pct_H2O', 'HydWtr_pct_Ammonia',\n",
-              "       'HydWtr_Na2O', 'Butanol', 'DI55102', 'DI55152', 'FC55003', 'FC55552',\n",
-              "       'FC55569', 'FC55576', 'FFC55555', 'LC55557', 'LC90366', 'LC90368',\n",
-              "       'TC55552'],\n",
+              "       'C4_pct_Hex', 'HydWtr_Na2O', 'Butanol', 'DI55102', 'DI55152', 'FC55552',\n",
+              "       'FC55569', 'FC55576', 'FFC55553', 'FFC55555', 'LC55557', 'LC90366',\n",
+              "       'LC90368', 'TC55552'],\n",
               "      dtype='object')"
             ]
           },
@@ -295,32 +283,32 @@
           "output_type": "stream",
           "text": [
             "                                       Feature Rotation             Feature  \\\n",
-            "0     [425_pct_Al, FC55569, LC90368, FC55552, FC5500...          425_pct_Al   \n",
-            "1     [425_pct_Al, FC55569, LC90368, FC55552, FC5500...             FC55569   \n",
-            "2     [425_pct_Al, FC55569, LC90368, FC55552, FC5500...             LC90368   \n",
-            "3     [425_pct_Al, FC55569, LC90368, FC55552, FC5500...             FC55552   \n",
-            "4     [425_pct_Al, FC55569, LC90368, FC55552, FC5500...             FC55003   \n",
+            "0     [425_pct_Al, FC55552, FC55576, DI55102, DI5515...          425_pct_Al   \n",
+            "1     [425_pct_Al, FC55552, FC55576, DI55102, DI5515...             FC55552   \n",
+            "2     [425_pct_Al, FC55552, FC55576, DI55102, DI5515...             FC55576   \n",
+            "3     [425_pct_Al, FC55552, FC55576, DI55102, DI5515...             DI55102   \n",
+            "4     [425_pct_Al, FC55552, FC55576, DI55102, DI5515...             DI55152   \n",
             "...                                                 ...                 ...   \n",
-            "7675  [TC55552, DI55152, FFC55555, FC55569, LC55557,...         HydWtr_Na2O   \n",
-            "7676  [TC55552, DI55152, FFC55555, FC55569, LC55557,...             FC55003   \n",
-            "7677  [TC55552, DI55152, FFC55555, FC55569, LC55557,...             DI55102   \n",
-            "7678  [TC55552, DI55152, FFC55555, FC55569, LC55557,...  HydWtr_pct_Ammonia   \n",
-            "7679  [TC55552, DI55152, FFC55555, FC55569, LC55557,...             LC90368   \n",
+            "8665  [TC55552, LC55557, FFC55553, FC55576, LC90368,...          425_pct_Al   \n",
+            "8666  [TC55552, LC55557, FFC55553, FC55576, LC90368,...          C4_pct_Eth   \n",
+            "8667  [TC55552, LC55557, FFC55553, FC55576, LC90368,...  HydWtr_pct_Ammonia   \n",
+            "8668  [TC55552, LC55557, FFC55553, FC55576, LC90368,...          C4_pct_H2O   \n",
+            "8669  [TC55552, LC55557, FFC55553, FC55576, LC90368,...          C4_pct_Hex   \n",
             "\n",
             "      Importance  \n",
-            "0          605.0  \n",
-            "1          424.0  \n",
-            "2          345.0  \n",
-            "3          310.0  \n",
-            "4          313.0  \n",
+            "0          610.0  \n",
+            "1          408.0  \n",
+            "2          353.0  \n",
+            "3          335.0  \n",
+            "4          326.0  \n",
             "...          ...  \n",
-            "7675       281.0  \n",
-            "7676       260.0  \n",
-            "7677       293.0  \n",
-            "7678       293.0  \n",
-            "7679       264.0  \n",
+            "8665       266.0  \n",
+            "8666       279.0  \n",
+            "8667       264.0  \n",
+            "8668       317.0  \n",
+            "8669       218.0  \n",
             "\n",
-            "[7680 rows x 3 columns]\n"
+            "[8670 rows x 3 columns]\n"
           ]
         }
       ],
@@ -362,29 +350,30 @@
           "output_type": "stream",
           "text": [
             "               Feature  Average Importance               Description\n",
-            "0              DI55152          382.568750    2ND STG SEPR TO FA-560\n",
-            "1           C4_pct_Eth          362.631250                       NaN\n",
-            "2   HydWtr_pct_Ammonia          359.031250                       NaN\n",
-            "3              TC55552          357.916667  DC-551 ALKOX  FD PREHEAT\n",
-            "4              LC90366          343.950000        FB-657 SAO STORAGE\n",
-            "5           C4_pct_H2O          343.779167                       NaN\n",
-            "6              DI55102          337.045833          HYDROL RX OUTLET\n",
-            "7          HydWtr_Na2O          333.954167                       NaN\n",
-            "8              FC55569          332.804167    30# STM TO C4 STRIPPER\n",
-            "9              FC55576          324.968750  CONDENSATE TO DESUPERHTR\n",
-            "10             FC55003          314.147917  DA-551 O/H H2O TO DC-551\n",
-            "11          425_pct_Al          313.645833                       NaN\n",
-            "12             LC90368          312.272917      FB-658 ALKOXIDE TANK\n",
-            "13             LC55557          303.864583       FA-554 SLURRY LEVEL\n",
-            "14             FC55552          298.527083  ALK FD TO HYDR RX DC-551\n",
-            "15            FFC55555          284.891667  RECYC BUT/ALKOX FD RATIO\n"
+            "0           C4_pct_H2O          359.401961                       NaN\n",
+            "1          HydWtr_Na2O          348.429412                       NaN\n",
+            "2   HydWtr_pct_Ammonia          334.470588                       NaN\n",
+            "3              TC55552          331.843137  DC-551 ALKOX  FD PREHEAT\n",
+            "4              DI55152          329.845098    2ND STG SEPR TO FA-560\n",
+            "5           425_pct_Al          321.154902                       NaN\n",
+            "6              LC90368          318.747059      FB-658 ALKOXIDE TANK\n",
+            "7              DI55102          316.335294          HYDROL RX OUTLET\n",
+            "8              FC55552          309.188235  ALK FD TO HYDR RX DC-551\n",
+            "9           C4_pct_Eth          308.633333                       NaN\n",
+            "10             FC55576          303.470588  CONDENSATE TO DESUPERHTR\n",
+            "11             FC55569          300.282353    30# STM TO C4 STRIPPER\n",
+            "12             LC55557          293.480392       FA-554 SLURRY LEVEL\n",
+            "13             LC90366          282.874510        FB-657 SAO STORAGE\n",
+            "14          C4_pct_Hex          279.356863                       NaN\n",
+            "15            FFC55553          272.698039  DC551 H2O/ALKOXIDE RATIO\n",
+            "16            FFC55555          260.788235  RECYC BUT/ALKOX FD RATIO\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_54704\\3091506829.py:9: SettingWithCopyWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_3656\\3091506829.py:9: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -418,7 +407,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-21 00:03:18.811491\n"
+            "2024-05-06 21:33:35.519683\n"
           ]
         }
       ],
