--- a/III Models/3 Model C4/5 Preprocessing - Slecected Features/Merge Data/1.1.1 IM - Create Dataset .ipynb
+++ b/III Models/3 Model C4/5 Preprocessing - Slecected Features/Merge Data/1.1.1 IM - Create Dataset .ipynb
@@ -12,7 +12,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_59820\\1304120184.py:1: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_4284\\1304120184.py:1: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -79,62 +79,62 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "            DI55102       DI55152       FC55003       FC55552       FC55569  \\\n",
-            "count  51276.000000  51276.000000  51276.000000  51276.000000  51276.000000   \n",
-            "mean       0.943637      0.933149   5996.438769  35905.715089   6607.317682   \n",
-            "std        0.054174      0.030232    858.862368   5055.523287    395.939854   \n",
-            "min        0.800002      0.837031   2823.920000  17996.100000   5135.670000   \n",
-            "25%        0.909285      0.912829   5481.060000  34933.275000   6370.660000   \n",
-            "50%        0.949218      0.933393   6014.140000  37960.000000   6584.415000   \n",
-            "75%        0.984700      0.952681   6562.375000  39022.700000   6823.535000   \n",
-            "max        1.061510      1.025180   9170.840000  52000.000000   8114.690000   \n",
+            "            DI55102       DI55152       FC55552       FC55569       FC55576  \\\n",
+            "count  50412.000000  50412.000000  50412.000000  50412.000000  50412.000000   \n",
+            "mean       0.944181      0.933228  35894.540348   6604.659472    368.223212   \n",
+            "std        0.054264      0.030261   5062.928860    391.775333    256.823627   \n",
+            "min        0.800002      0.837031  17996.100000   5135.670000      0.000000   \n",
+            "25%        0.909903      0.912872  34928.575000   6367.697500    187.706750   \n",
+            "50%        0.950058      0.933519  37958.600000   6585.025000    340.072500   \n",
+            "75%        0.985276      0.952969  39020.800000   6824.470000    548.285500   \n",
+            "max        1.061510      1.025180  52000.000000   8114.690000   1132.440000   \n",
             "\n",
-            "            FC55576      FFC55555       LC55557       LC90366       LC90368  \\\n",
-            "count  51276.000000  51276.000000  51276.000000  51276.000000  51276.000000   \n",
-            "mean     367.354165      0.771989     69.454574     46.226400     36.433544   \n",
-            "std      256.408521      0.023064      2.904752     28.943898     20.106838   \n",
-            "min        0.000000      0.687883     60.061400      0.000000      0.006367   \n",
-            "25%      186.503750      0.758508     66.945500     21.222600     19.991775   \n",
-            "50%      339.382000      0.773440     70.081050     47.668800     41.422750   \n",
-            "75%      547.502750      0.788222     71.726650     76.976300     51.743250   \n",
-            "max     1132.440000      0.857842     78.662700     87.901600     81.210800   \n",
+            "           FFC55553      FFC55555       LC55557       LC90366       LC90368  \\\n",
+            "count  50412.000000  50412.000000  50412.000000  50412.000000  50412.000000   \n",
+            "mean       1.000855      0.771996     69.444867     46.383755     36.483942   \n",
+            "std        0.037820      0.022996      2.913241     28.994092     20.119883   \n",
+            "min        0.811764      0.689689     60.061400      0.000000      0.006367   \n",
+            "25%        0.977031      0.758525     66.887075     21.497850     20.074150   \n",
+            "50%        0.998706      0.773389     70.082700     47.940250     41.592000   \n",
+            "75%        1.020160      0.788061     71.738075     77.046100     51.752025   \n",
+            "max        1.178320      0.857842     78.477100     87.901600     81.210800   \n",
             "\n",
             "            TC55552  \n",
-            "count  51276.000000  \n",
-            "mean     168.789842  \n",
-            "std       15.296005  \n",
+            "count  50412.000000  \n",
+            "mean     168.849778  \n",
+            "std       15.203394  \n",
             "min      119.840000  \n",
-            "25%      155.687000  \n",
-            "50%      172.694000  \n",
-            "75%      180.884250  \n",
+            "25%      155.814500  \n",
+            "50%      172.744500  \n",
+            "75%      180.849250  \n",
             "max      202.625000  \n",
             "         425_pct_Al    C4_pct_Eth    C4_pct_H2O  HydWtr_pct_Ammonia  \\\n",
-            "count  51276.000000  51276.000000  51276.000000        51276.000000   \n",
-            "mean       6.152577      1.231762     21.188189            0.970658   \n",
-            "std        0.259811      0.729966      2.742453            0.154151   \n",
+            "count  50412.000000  50412.000000  50412.000000        50412.000000   \n",
+            "mean       6.149348      1.216325     21.191892            0.971065   \n",
+            "std        0.254883      0.711173      2.751276            0.153447   \n",
             "min        5.175720      0.009510      8.012620            0.350000   \n",
-            "25%        6.008258      0.629523     18.833250            0.875801   \n",
-            "50%        6.144140      1.113490     21.447100            0.941064   \n",
-            "75%        6.296602      1.691958     23.330300            1.034005   \n",
+            "25%        6.007325      0.626273     18.827625            0.875999   \n",
+            "50%        6.143745      1.096440     21.464200            0.941573   \n",
+            "75%        6.292922      1.679992     23.341025            1.034320   \n",
             "max        7.136170     12.110300     34.783400            1.631470   \n",
             "\n",
-            "        HydWtr_Na2O  \n",
-            "count  51276.000000  \n",
-            "mean       0.809311  \n",
-            "std        0.696798  \n",
-            "min        0.000000  \n",
-            "25%        0.453939  \n",
-            "50%        0.665013  \n",
-            "75%        0.983819  \n",
-            "max       12.882300  \n",
+            "         C4_pct_Hex   HydWtr_Na2O  \n",
+            "count  50412.000000  50412.000000  \n",
+            "mean       0.463719      0.805144  \n",
+            "std        0.240083      0.695142  \n",
+            "min        0.000060      0.000000  \n",
+            "25%        0.346208      0.452928  \n",
+            "50%        0.441621      0.662465  \n",
+            "75%        0.540207      0.981289  \n",
+            "max        3.131310     12.882300  \n",
             "            Butanol\n",
-            "count  51276.000000\n",
-            "mean       9.823222\n",
-            "std       10.224860\n",
+            "count  50412.000000\n",
+            "mean       9.839466\n",
+            "std       10.203218\n",
             "min        0.000000\n",
-            "25%        3.833330\n",
+            "25%        3.850000\n",
             "50%        5.900000\n",
-            "75%       10.929050\n",
+            "75%       11.000600\n",
             "max       58.786900\n"
           ]
         }
@@ -207,12 +207,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Index(['Date', 'DI55102', 'DI55152', 'FC55003', 'FC55552', 'FC55569',\n",
-            "       'FC55576', 'FFC55555', 'LC55557', 'LC90366', 'LC90368', 'TC55552'],\n",
+            "Index(['Date', 'DI55102', 'DI55152', 'FC55552', 'FC55569', 'FC55576',\n",
+            "       'FFC55553', 'FFC55555', 'LC55557', 'LC90366', 'LC90368', 'TC55552'],\n",
             "      dtype='object')\n",
             "Index(['Date', 'Butanol'], dtype='object')\n",
             "Index(['Date', '425_pct_Al', 'C4_pct_Eth', 'C4_pct_H2O', 'HydWtr_pct_Ammonia',\n",
-            "       'HydWtr_Na2O'],\n",
+            "       'C4_pct_Hex', 'HydWtr_Na2O'],\n",
             "      dtype='object')\n"
           ]
         }
@@ -400,19 +400,19 @@
             "3 2012-05-16 19:00:00    6.309390    2.515210    21.97655            0.905959   \n",
             "4 2012-05-16 20:00:00    6.310090    2.517925    21.98185            0.904837   \n",
             "\n",
-            "   HydWtr_Na2O    Butanol   DI55102   DI55152    FC55003   FC55552   FC55569  \\\n",
-            "0     2.618940  58.526500  0.970151  0.924718  4968.4400  41476.45  6915.395   \n",
-            "1     2.665560  58.526500  0.970151  0.924718  4968.4400  41476.45  6915.395   \n",
-            "2     2.805415  56.692400  0.970151  0.924718  4968.4400  41476.45  6915.395   \n",
-            "3     2.945270  56.692400  0.970151  0.924718  4968.4400  41476.45  6915.395   \n",
-            "4     3.038505  53.635533  0.970441  0.923875  5205.8625  41490.25  6915.535   \n",
+            "   C4_pct_Hex  HydWtr_Na2O    Butanol   DI55102   DI55152   FC55552   FC55569  \\\n",
+            "0    0.658581     2.618940  58.526500  0.970151  0.924718  41476.45  6915.395   \n",
+            "1    0.658918     2.665560  58.526500  0.970151  0.924718  41476.45  6915.395   \n",
+            "2    0.659930     2.805415  56.692400  0.970151  0.924718  41476.45  6915.395   \n",
+            "3    0.660942     2.945270  56.692400  0.970151  0.924718  41476.45  6915.395   \n",
+            "4    0.661616     3.038505  53.635533  0.970441  0.923875  41490.25  6915.535   \n",
             "\n",
-            "     FC55576  FFC55555    LC55557    LC90366   LC90368    TC55552  \n",
-            "0  338.08450  0.751216  65.844650  62.291900  51.34935  177.18800  \n",
-            "1  338.08450  0.751216  65.844650  62.291900  51.34935  177.18800  \n",
-            "2  338.08450  0.751216  65.844650  62.291900  51.34935  177.18800  \n",
-            "3  338.08450  0.751216  65.844650  62.291900  51.34935  177.18800  \n",
-            "4  334.65925  0.750611  65.922175  58.413975  51.01720  177.35975  \n"
+            "     FC55576  FFC55553  FFC55555    LC55557    LC90366   LC90368    TC55552  \n",
+            "0  338.08450  0.998497  0.751216  65.844650  62.291900  51.34935  177.18800  \n",
+            "1  338.08450  0.998497  0.751216  65.844650  62.291900  51.34935  177.18800  \n",
+            "2  338.08450  0.998497  0.751216  65.844650  62.291900  51.34935  177.18800  \n",
+            "3  338.08450  0.998497  0.751216  65.844650  62.291900  51.34935  177.18800  \n",
+            "4  334.65925  0.998991  0.750611  65.922175  58.413975  51.01720  177.35975  \n"
           ]
         }
       ],
@@ -450,7 +450,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-21 23:07:18.681705\n"
+            "2024-05-06 22:14:06.655151\n"
           ]
         }
       ],
