--- a/III Models/3 Model C10/3 Feature Selection/1.0.4 XGB_contData_iter.ipynb
+++ b/III Models/3 Model C10/3 Feature Selection/1.0.4 XGB_contData_iter.ipynb
@@ -23,7 +23,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_2620\\526159370.py:2: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_8772\\526159370.py:2: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -126,12 +126,27 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# df_All = df_All[df_All['Date'] > '2022-06-15 00:00:00']"
+        "# List of columns to exclude to run XGboost feature selection\n",
+        "exclude_columns = [# OLS - FSF agreed\n",
+        "                    'DI55580', 'LC55557'\n",
+        "                   ]\n",
+        "\n",
+        "# Create a new DataFrame without the excluded columnsd\n",
+        "df_All = df_All.drop(columns=exclude_columns)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 6,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# df_All = df_All[df_All['Date'] > '2022-06-15 00:00:00']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -162,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -170,14 +185,14 @@
             "text/plain": [
               "Index(['Date', '425_pct_Al', 'Al2O3', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
               "       'HydWtr_pct_Ammonia', 'C4_pct_Hex', 'HydWtr_Na2O', 'Decanol', 'DI55102',\n",
-              "       'DI55152', 'DI55580', 'FC55003', 'FC55009', 'FC55552', 'FC55569',\n",
-              "       'FC55576', 'FFC55553', 'FFC55555', 'LC52572', 'LC55553', 'LC55557',\n",
-              "       'LC55568', 'LC90366', 'LC90368', 'PI55004', 'PI55020', 'TC55552',\n",
-              "       'TC55555', 'TI40050', 'TI55021'],\n",
+              "       'DI55152', 'FC55003', 'FC55009', 'FC55552', 'FC55569', 'FC55576',\n",
+              "       'FFC55553', 'FFC55555', 'LC52572', 'LC55553', 'LC55568', 'LC90366',\n",
+              "       'LC90368', 'PI55004', 'PI55020', 'TC55552', 'TC55555', 'TI40050',\n",
+              "       'TI55021'],\n",
               "      dtype='object')"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -188,7 +203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -200,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -255,40 +270,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "                                        Feature Rotation     Feature  \\\n",
-            "0      [425_pct_Al, LC55553, FC55576, FC55003, LC9036...  425_pct_Al   \n",
-            "1      [425_pct_Al, LC55553, FC55576, FC55003, LC9036...     LC55553   \n",
-            "2      [425_pct_Al, LC55553, FC55576, FC55003, LC9036...     FC55576   \n",
-            "3      [425_pct_Al, LC55553, FC55576, FC55003, LC9036...     FC55003   \n",
-            "4      [425_pct_Al, LC55553, FC55576, FC55003, LC9036...     LC90368   \n",
-            "...                                                  ...         ...   \n",
-            "26995  [TI55021, M_Value, DI55102, 425_pct_Al, FC5556...     LC90368   \n",
-            "26996  [TI55021, M_Value, DI55102, 425_pct_Al, FC5556...     DI55580   \n",
-            "26997  [TI55021, M_Value, DI55102, 425_pct_Al, FC5556...  C4_pct_Hex   \n",
-            "26998  [TI55021, M_Value, DI55102, 425_pct_Al, FC5556...     LC55568   \n",
-            "26999  [TI55021, M_Value, DI55102, 425_pct_Al, FC5556...     TC55552   \n",
+            "                                        Feature Rotation      Feature  \\\n",
+            "0      [425_pct_Al, LC52572, FC55569, FC55003, TI5502...   425_pct_Al   \n",
+            "1      [425_pct_Al, LC52572, FC55569, FC55003, TI5502...      LC52572   \n",
+            "2      [425_pct_Al, LC52572, FC55569, FC55003, TI5502...      FC55569   \n",
+            "3      [425_pct_Al, LC52572, FC55569, FC55003, TI5502...      FC55003   \n",
+            "4      [425_pct_Al, LC52572, FC55569, FC55003, TI5502...      TI55021   \n",
+            "...                                                  ...          ...   \n",
+            "23515  [TI55021, PI55020, LC90368, FC55009, TC55555, ...        Al2O3   \n",
+            "23516  [TI55021, PI55020, LC90368, FC55009, TC55555, ...   425_pct_Al   \n",
+            "23517  [TI55021, PI55020, LC90368, FC55009, TC55555, ...      DI55152   \n",
+            "23518  [TI55021, PI55020, LC90368, FC55009, TC55555, ...  HydWtr_Na2O   \n",
+            "23519  [TI55021, PI55020, LC90368, FC55009, TC55555, ...      FC55003   \n",
             "\n",
             "       Importance  \n",
-            "0           416.0  \n",
-            "1           178.0  \n",
-            "2           226.0  \n",
-            "3           211.0  \n",
-            "4           200.0  \n",
+            "0           430.0  \n",
+            "1           311.0  \n",
+            "2           190.0  \n",
+            "3           214.0  \n",
+            "4           154.0  \n",
             "...           ...  \n",
-            "26995       160.0  \n",
-            "26996       141.0  \n",
-            "26997       157.0  \n",
-            "26998       105.0  \n",
-            "26999       183.0  \n",
+            "23515       141.0  \n",
+            "23516       155.0  \n",
+            "23517       162.0  \n",
+            "23518       201.0  \n",
+            "23519       151.0  \n",
             "\n",
-            "[27000 rows x 3 columns]\n"
+            "[23520 rows x 3 columns]\n"
           ]
         }
       ],
@@ -298,7 +313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -322,7 +337,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -330,43 +345,41 @@
           "output_type": "stream",
           "text": [
             "               Feature  Average Importance                Description\n",
-            "0          HydWtr_Na2O          235.287778                        NaN\n",
-            "1              FC55009          219.400000    STM TO PA-551  RING HTR\n",
-            "2   HydWtr_pct_Ammonia          214.872222                        NaN\n",
-            "3              DI55152          214.847778     2ND STG SEPR TO FA-560\n",
-            "4              TC55552          213.675556   DC-551 ALKOX  FD PREHEAT\n",
-            "5           C4_pct_H2O          202.543333                        NaN\n",
-            "6              M_Value          201.976667                        NaN\n",
-            "7              DI55102          199.338889           HYDROL RX OUTLET\n",
-            "8              FC55552          190.743333   ALK FD TO HYDR RX DC-551\n",
-            "9           425_pct_Al          189.736667                        NaN\n",
-            "10            FFC55553          187.785556   DC551 H2O/ALKOXIDE RATIO\n",
-            "11          C4_pct_Hex          187.164444                        NaN\n",
-            "12          C4_pct_Eth          181.865556                        NaN\n",
-            "13             PI55020          180.848889        DA-554 TOP PRESSURE\n",
-            "14             LC90366          180.133333         FB-657 SAO STORAGE\n",
-            "15             LC90368          179.692222       FB-658 ALKOXIDE TANK\n",
-            "16             FC55569          172.470000     30# STM TO C4 STRIPPER\n",
-            "17             TI55021          171.256667             STEAM TO DA554\n",
-            "18             FC55003          167.426667   DA-551 O/H H2O TO DC-551\n",
-            "19             LC52572          165.330000   FB-554 SLURRY SURGE TANK\n",
-            "20             DI55580          163.997778   DA-554 BTMS SLURRY TO EX\n",
-            "21             FC55576          161.040000   CONDENSATE TO DESUPERHTR\n",
-            "22             PI55004          156.968889     DA-554 BOTTOM PRESSURE\n",
-            "23            FFC55555          154.924444   RECYC BUT/ALKOX FD RATIO\n",
-            "24             TI40050          153.204444  CLARK AIR COMP INLET TEMP\n",
-            "25             TC55555          153.172222        EA-552 OUT  RECY C4\n",
-            "26             LC55568          129.593333    DA-554 C4 STRPR BOTTOMS\n",
-            "27             LC55557          127.490000        FA-554 SLURRY LEVEL\n",
-            "28               Al2O3          125.623333                        NaN\n",
-            "29             LC55553          117.590000   DC551 HYDR RX SLURRY LEV\n"
+            "0          HydWtr_Na2O          240.098810                        NaN\n",
+            "1              FC55552          233.430952   ALK FD TO HYDR RX DC-551\n",
+            "2              M_Value          224.111905                        NaN\n",
+            "3              FC55009          222.997619    STM TO PA-551  RING HTR\n",
+            "4   HydWtr_pct_Ammonia          221.221429                        NaN\n",
+            "5              LC90368          219.123810       FB-658 ALKOXIDE TANK\n",
+            "6              LC52572          213.115476   FB-554 SLURRY SURGE TANK\n",
+            "7           C4_pct_H2O          212.058333                        NaN\n",
+            "8           C4_pct_Eth          211.927381                        NaN\n",
+            "9              TC55552          210.990476   DC-551 ALKOX  FD PREHEAT\n",
+            "10            FFC55553          209.980952   DC551 H2O/ALKOXIDE RATIO\n",
+            "11          C4_pct_Hex          208.244048                        NaN\n",
+            "12             DI55152          198.639286     2ND STG SEPR TO FA-560\n",
+            "13             DI55102          188.919048           HYDROL RX OUTLET\n",
+            "14          425_pct_Al          187.180952                        NaN\n",
+            "15             LC90366          185.551190         FB-657 SAO STORAGE\n",
+            "16             PI55020          185.496429        DA-554 TOP PRESSURE\n",
+            "17             FC55003          183.388095   DA-551 O/H H2O TO DC-551\n",
+            "18             FC55576          182.578571   CONDENSATE TO DESUPERHTR\n",
+            "19             TI40050          165.344048  CLARK AIR COMP INLET TEMP\n",
+            "20             FC55569          159.958333     30# STM TO C4 STRIPPER\n",
+            "21               Al2O3          153.302381                        NaN\n",
+            "22             TC55555          152.333333        EA-552 OUT  RECY C4\n",
+            "23            FFC55555          151.127381   RECYC BUT/ALKOX FD RATIO\n",
+            "24             PI55004          143.814286     DA-554 BOTTOM PRESSURE\n",
+            "25             TI55021          141.415476             STEAM TO DA554\n",
+            "26             LC55553          133.205952   DC551 HYDR RX SLURRY LEV\n",
+            "27             LC55568          132.444048    DA-554 C4 STRPR BOTTOMS\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_2620\\3091506829.py:9: SettingWithCopyWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_8772\\3091506829.py:9: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -393,14 +406,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-05-05 23:31:00.289456\n"
+            "2024-05-06 22:58:50.915570\n"
           ]
         }
       ],
